# raylib-basegame

./: CMakeLists.txt  README.md  main.cpp
app/: Game.cpp  Game.h
app/Entities/: Player.cpp  Player.h
app/States/: IntroState.cpp  IntroState.h  PlayState.cpp  PlayState.h
system/Entities/: BaseEntity.cpp  BaseEntity.h
system/States/: BaseState.cpp  BaseState.h  StateMachine.cpp  StateMachine.h
